# JNIManager

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ndk.cpp
app/src/main/cpp/base/: BaseDynamicLib.cpp  BaseDynamicLib.h  BaseStaticLib.cpp  BaseStaticLib.h
app/src/main/cpp/bitmap/: BitmapLib.cpp  BitmapLib.h
app/src/main/cpp/c/: CInvoker.cpp  CInvoker.h  CLib.cpp  CLib.h  cFile.c  cFile.h
app/src/main/cpp/exception/: ExceptionLib.cpp  ExceptionLib.h
app/src/main/cpp/log/: Logger.cpp  Logger.h
app/src/main/cpp/object/: ObjectFieldLib.cpp  ObjectFieldLib.h  ObjectMethodLib.cpp  ObjectMethodLib.h  ObjectStaticFieldLib.cpp  ObjectStaticFieldLib.h  ObjectStaticMethodLib.cpp  ObjectStaticMethodLib.h  ObjectSuperLib.cpp  ObjectSuperLib.h
app/src/main/cpp/ref/: RefLib.cpp  RefLib.h
app/src/main/cpp/string/: StringDynamicLib.cpp  StringDynamicLib.h  StringStaticLib.cpp  StringStaticLib.h
app/src/main/res/drawable/: ic_app.xml  shape_item_bg.xml
app/src/main/res/layout/: activity_bitmap.xml  activity_dynamic_string.xml  activity_exception.xml  activity_invoke_c.xml  activity_main.xml  activity_mmap.xml  activity_object_filed.xml  activity_object_method.xml  activity_object_static_filed.xml  activity_object_static_method.xml  activity_object_super_method.xml  activity_ref.xml  activity_static_base.xml  activity_static_string.xml
app/src/main/res/values/: strings.xml  themes.xml
libs/: build.gradle
libs/src/main/: AndroidManifest.xml
libs/src/main/cpp/: CMakeLists.txt  mmap.cpp
(+38 files in other folders)
